# CV-CUDA

./: pyproject.toml
.github/workflows/: python-publish.yml
