[build-system]
requires = ["pybind11", "pdm-pep517"]
build-backend = "pdm.pep517.api"

[project]
version = "0.0.019"
name = "cvcuda-test"

[tool.pdm.build]
is-purelib = false
pre_build = "build.py"
#setup-script = "build.py"
#run-setuptools = true
package-dir = "build-rel/lib/python/"
includes = [".", "build-rel"]
excludes = ["NOTHING"]
# Force inclusion
