[build-system]
requires = ["pybind11", "pdm-pep517"]
build-backend = "pdm.pep517.api"

[project]
version = "0.0.020"
name = "cvcuda-test"

[tool.pdm.build]
is-purelib = false
package-dir = "build-rel/lib/python/"
includes = ["build-rel"]

#pre_build = "build.py"
#setup-script = "build.py"
#run-setuptools = true
#excludes = ["NOTHING"]
# Force inclusion
